--- a/CrewManagement/app/src/main/res/values/strings.xml
+++ b/CrewManagement/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="task_hint_creation">Enter Task Description. Ex: Mix Bedroom Paint</string>
     <string name="Select_Job">Select Job</string>
     <string name="Select_Task">Select Task</string>
+    <string name="Select_Member">Select Member</string>
     <!-- END OF STRINGS FOR TAB NAMES AND JobAssignment CLASS -->
 
     <string name="defaultJob1">Lumber Yard</string>
@@ -63,4 +64,7 @@
     <string name="menuOption6">Log out</string>
     <string name="menuOption7">Call Tech Support</string>
 
+    <string name="ctv">CTV</string>
+    <string name="cbc">CBC</string>
+    <string name="global">GLOBAL</string>
 </resources>
